<resources>
    <!-- Main Activity -->
    <string name="app_name">Save Water Tap</string>
    <string name="water_saver">WATER SAVER</string>
    <string name="jokes">JOKES</string>
    <string name="about">ABOUT</string>
    <string name="save_water_btn">SAVE WATER NOW</string>
    <string name="save_water_btn_on">TURN TAP OFF</string>

    <!-- Water Saver Fragment -->
    <string name="liters_saved">0</string>
    <string name="you_have_saved">You have saved</string>
    <string name="liters_of_water">liters of water</string>
    <string name="equals">Which equals</string>
    <string name="equals_text">Nothing... Hit that button to change that!</string>

    <!-- About Fragment -->
    <string name="about_text">This app were made as reaction on the behaviour of people who
 * consume water just to hide sounds. The app calculates how much water is saved and places
 * it in relation to other water consuming facts. The app also display jokes to make the
 * toilet visit more pleasant.</string>

    <!-- Jokes Fragment -->
    <string name="shake_device">"Shake your device for a new dazzling joke that saves water!"</string>
    <string name="joke_title"></string>
    <string name="joke_body"></string>

    <!-- Joke Resources -->
    <string name="joke_title_src_1">What’s the best thing about Switzerland?</string>
    <string name="joke_body_src_1">I don’t know, but the flag is a big plus.</string>
    <string name="joke_title_src_2">I invented a new word!</string>
    <string name="joke_body_src_2">Plagiarism!</string>
    <string name="joke_title_src_3">Helvetica and Times New Roman walk into a bar.</string>
    <string name="joke_body_src_3">“Get out of here!” shouts the bartender. “We don’t serve your type.” </string>
    <string name="joke_title_src_4">Did you hear about the claustrophobic astronaut?</string>
    <string name="joke_body_src_4">He just needed a little space.</string>
    <string name="joke_title_src_5">Why don’t scientists trust atoms?</string>
    <string name="joke_body_src_5">Because they make up everything.</string>
    <string name="joke_title_src_empty">Oops!</string>
    <string name="joke_body_src_empty">No more jokes to display... But shake again for another round! :D</string>

</resources>